# vibegallery

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  photoapp.py  pyproject.toml
.github/workflows/: docker.yml
app/: __init__.py  config.py  main.py  models.py  scanner.py
app/templates/: base.html  index.html  slideshow.html
tests/: test_app.py
